@@ -1,3 +1,11 @@
+AP-2007-12-18-0: Bugfix:    o Queue Consumables query incorrect in ARCo predefined 
+                              queries
+                            o Upgrade to 6.1u3 fails for PostgreSQL < 8.0, minor 
+                              issues i dbdefinition.xml for PSQL > 8.0
+                 Bugster:   6598176, 6640690
+                 Issue:     2373, 2446
+                 Review:    JO
+
 PJ-2007-12-07-0: Bugfix:    Error.jsp contains unbalanced tagError.jsp
                  Bugfix:    Reporting 'View' dropdown menu and 'Save Result' functionality is confusing  
                  Bugster:   6556389, 6638329
